Add partial xdebug support. currently only works for core wp files

--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "scripts": {
         "phpcs": "phpcs",
         "phpunit": "phpunit",
+        "phpunit-debug": "phpunit --debug",
         "test": [
             "phpunit",
             "phpcs"
@@ -9,9 +10,6 @@
         "fix": [
             "phpcbf"
         ]
-    },
-    "require": {
-        "elasticsearch/elasticsearch": "^8.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
@@ -26,5 +24,8 @@
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
         }
+    },
+    "require": {
+        "opensearch-project/opensearch-php": "^2.0"
     }
 }
