--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,13 +28,17 @@ services:
       WORDPRESS_DB_PASSWORD: wordpress
       WORDPRESS_DB_NAME: wordpress
       WORDPRESS_DEBUG: 1
+      XDEBUG_HOST: host.docker.internal
+      XDEBUG_IDEKEY: VSCODE
     volumes:
-      - wp-data:/var/www/html
+      - ./wp:/var/www/html
       - ./:/var/www/html/wp-content/plugins/opensearch-connect
     ports:
-      - 8800:80
+      - 8080:80
     depends_on:
       - db
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
 
   opensearch-node1:
     image: opensearchproject/opensearch:latest
