--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
             "port": 9003,
             "log": true,
             "pathMappings": {
+                "/var/www/html/wp-content/plugins/opensearch-connect": "${workspaceFolder}",
                 "/var/www/html": "${workspaceFolder}/wp"
             },
         }
