Add abstract document class

--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -45,4 +45,9 @@
 			<property name="blank_line_check" value="true"/>
 		</properties>
 	</rule>
+	<rule ref="WordPress.NamingConventions.ValidHookName">
+		<properties>
+			<property name="additionalWordDelimiters" value="/"/>
+		</properties>
+	</rule>
 </ruleset>
